<resources>
    <string name="app_name">InventoryApp</string>
    <string name="empty_view_title_text">There is no inventory yet.</string>
    <string name="empty_view_subtitle_text">Please add some, by clicking pink button and filling at least name, price and quantity.</string>
    <string name="category_overview">Overview</string>
    <string name="category_supplier">Supplier</string>
    <string name="hint_product_name">Name</string>
    <string name="hint_product_price">Price</string>
    <string name="hint_product_quantity">Quantity</string>
    <string name="hint_product_supplier_name">Supplier Name</string>
    <string name="hint_product_supplier_phone">Supplier Phone</string>
    <string name="editor_activity_title_new_product">Add a Product</string>
    <string name="editor_activity_title_edit_product">Edit Product</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_save_product_successful">Product saved</string>
    <string name="editor_save_product_failed">Error with saving product</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="sale">Sale</string>
    <string name="substract_quantity">-</string>
    <string name="add_quantity">+</string>
    <string name="editor_invalid_inputs">Invalid input. All fields must be filled to save product.</string>
    <string name="order">Order</string>
</resources>
